--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 <meta property="og:title" content="Yats Hackathon 2022 | L'accès à l'art et à la culture par le digital">
 <meta property="og:type" content="image.jpg" />
 <meta property="og:image" content="https://zupimages.net/up/22/43/f6yu.jpg">
-<meta property="og:url" content="https://yatshackathon.netlify.app">
+<meta property="og:url" content="https://yatshackathon2022.netlify.app">
 <meta name="twitter:card" content="summary_large_image">
 
 
