--- a/index.html
+++ b/index.html
@@ -117,13 +117,13 @@
                 </li>
              
                 <li class="nav-item">
-                  <a href="https://kloo.me/yats-hackathon-form" class="nav-link-item">S'inscrire</a>
+                  <a href="https://kloo.me/yats-hackathon-form"  target="_blank" class="nav-link-item">Inscrivez-vous ici</a>
                 </li>
                 <li class="nav-item">
                   <a  href="reglement_yats_hackathon_2022.pdf" download="reglement_yats_hackathon_2022" class="nav-link-item">Télécharger le règlement</a>
                 </li>
                 <li class="nav-item">
-                  <a href="https://wa.me/message/OP3HPJCWWU75K1" class="nav-link-item">Nous contacter</a>
+                  <a href="https://wa.me/message/OP3HPJCWWU75K1" target="_blank" class="nav-link-item">Nous contacter</a>
                 </li>
               </ul>
             </nav>
@@ -297,7 +297,7 @@
                   <i class="fas fa-check"></i>Les étudiants porteurs de projet numérique
                 </li>
               </ul><br>
-              <a class="btn l-11-hero-btn" href="https://kloo.me/yats-hackathon-form">S'inscrire</a>
+              <a class="btn l-11-hero-btn" href="https://kloo.me/yats-hackathon-form" target="_blank">S'inscrire</a>
             </div>
           </div>
         </div>
@@ -416,7 +416,7 @@
               </div>
             </div>
           </div><br><br><br><br>
-          <a class="btn l-11-hero-btn w-50" href="https://kloo.me/yats-hackathon-form">S'inscrire</a>
+          <a class="btn l-11-hero-btn w-50" href="https://kloo.me/yats-hackathon-form" target="_blank">S'inscrire</a>
         </div>
       </div>
     </div>
@@ -466,7 +466,7 @@
               <h2>Prêt à relever le défi ?</h2>
               <p>Forme ta DREAM TEAM et venez contribuer à la valorisation du patrimoine historique et culturel du Bénin. </p>
               <div class="btn-area">
-                <a href="https://kloo.me/yats-hackathon-form" class="btn"><i class="fas fa-cash-register d-inline-block"></i> Inscrivez-vous ici</a>
+                <a href="https://kloo.me/yats-hackathon-form" target="_blank" class="btn"><i class="fas fa-cash-register d-inline-block"></i> Inscrivez-vous ici</a>
               </div>
               <div class="btn-area">
                 <a href="reglement_yats_hackathon_2022.pdf" download="reglement_yats_hackathon_2022" class="btn"><i class="fas fa-download d-inline-block"></i> Télécharger le règlement</a>
@@ -514,7 +514,7 @@
         <div class="row">
           <div class="col-lg-12">
             <div class="text-center">
-              <p>© Yats Hackathon 2022 | Made by  <a style="color: #036a56 ;" href="http://linkedin.com/in/fredthedev"> <b>FredTheDev</b> </a> </p>
+              <p>© Yats Hackathon 2022 | Made by  <a style="color: #036a56 ;" href="http://linkedin.com/in/fredthedev" target="_blank"> <b>FredTheDev</b> </a> </p>
             </div>
           </div>
         </div>
