--- a/index.html
+++ b/index.html
@@ -148,7 +148,6 @@
                 <div class="col-lg-8 col-md-8 col-sm-10">
                   <p class="position-relative banner-main-content-l-11">Contribuer à la promotion de l’accès à l’art et à la culture par des
                     solutions numériques.
-                   
                   </p>
                 </div>
                 <!--<div class="col-lg-4 col-md-4 col-sm-6 flex-y-center ">
@@ -250,6 +249,7 @@
                   <h2 style="color: #e0aa26;">
                     Le concours
                   </h2>
+                  <div class="content-body">
                   <p class="pp">YATS Hackathon est mis en œuvre dans le but de contribuer à la
                     dynamique en cours portant la valorisation du patrimoine historique et
                     culturel du Bénin. C’est dans cet esprit que s’inscrit le thème de cette
@@ -257,7 +257,7 @@
                     Les participants auront à travailler sur les enjeux liés à l’accès à l’art
                     et à la culture, à la diffusion de l’offre culturelle par le numérique et à
                     l’économie créative. Ils auront pour objectif de répondre à ces défis en
-                    proposant des solutions digitales et des prototypes innovants.<br>Un jury composé d’ingénieurs informatiques et de professionnels de la culture évaluera les projets ; les trois meilleures propositions se verront attribuer des prix et un accompagnement technique (programme d’incubation) par des structures partenaires pour développer leurs projets.</p>
+                    proposant des solutions digitales et des prototypes innovants.<br>Un jury composé d’ingénieurs informatiques et de professionnels de la culture évaluera les projets ; les trois meilleures propositions se verront attribuer des prix et un accompagnement technique (programme d’incubation) par des structures partenaires pour développer leurs projets.</p></div>
                 </div>
               </div>
               
