--- a/index.html
+++ b/index.html
@@ -150,15 +150,13 @@
                     solutions numériques.
                   </p>
                 </div>
-                <!--<div class="col-lg-4 col-md-4 col-sm-6 flex-y-center ">
-                  <a target="_blank" class="btn l-11-hero-btn" href="https://kloo.me/yats-hackathon-form">S'inscrire</a>
-                </div> -->
+           
                 
               </div>
             </div>
           </div>
           <div class="col-lg-9 order-lg-1 order-0" data-aos="fade-up" data-aos-duration="800" data-aos-once="true">
-            <img src="image/p.jpg" alt="" class="w-100 hero-l11-main-image">
+            <img src="image/p.jpg" alt="main-image" class="w-100 hero-l11-main-image">
           </div>
         </div>
       </div>
@@ -354,7 +352,7 @@
                     <i class="icon icon-trophy"></i>
                   </div>
                   <div class="content-body">
-                    <h5>Equipe lauréate</h5>
+                    <p class="titre">Equipe lauréate</p>
                     <p>1.000.000 FCFA + <br> Stage d'incubation chez une entreprise partenaire</p>
                   </div>
                 </div>
@@ -365,7 +363,7 @@
                     <i class="icon icon-trophy"></i>
                   </div>
                   <div class="content-body">
-                    <h5>2ème équipe</h5>
+                    <p class="titre">2ème équipe</p>
                     <p>500.000 FCFA + <br> Stage d'incubation chez une entreprise partenaire</p>
                   </div>
                 </div>
@@ -376,7 +374,7 @@
                     <i class="icon icon-trophy"></i>
                   </div>
                   <div class="content-body">
-                    <h5>3ème équipe</h5>
+                    <p class="titre">3ème équipe</p>
                     <p>250.000 FCFA + <br> Stage d'incubation chez une entreprise partenaire</p>
                   </div>
                 </div>
@@ -387,7 +385,7 @@
                     <i class="icon icon-trophy"></i>
                   </div>
                   <div class="content-body">
-                    <h5>4ème équipe</h5>
+                    <p class="titre">4ème équipe</p>
                     <p>Routeurs wifi + <br> 1 mois de connexion illimitée</p>
                   </div>
                 </div>
@@ -398,7 +396,7 @@
                     <i class="icon icon-trophy"></i>
                   </div>
                   <div class="content-body">
-                    <h5>5ème équipe</h5>
+                    <p class="titre">5ème équipe</p>
                     <p>Dotation en ouvrages </p>
                   </div>
                 </div>
@@ -409,14 +407,14 @@
                     <i class="icon icon-trophy"></i>
                   </div>
                   <div class="content-body">
-                    <h5>Toutes les équipes finalistes</h5>
+                    <p class="titre">Toutes les équipes finalistes</p>
                     <p>Sortie pédagogique (visite de site culturel) </p>
                   </div>
                 </div>
               </div>
             </div>
           </div><br><br><br><br>
-          <a class="btn l-11-hero-btn w-50" href="https://kloo.me/yats-hackathon-form" target="_blank">S'inscrire</a>
+          <a class="btn l-11-hero-btn w-50" href="https://kloo.me/yats-hackathon-form" style="font-weight: bold;" target="_blank">S'inscrire</a>
         </div>
       </div>
     </div>
@@ -497,11 +495,11 @@
           <div class="col-md-3">
             <div class="social-icons-l-11">
               <ul class="pl-0 list-unstyled d-flex  justify-content-center justify-content-md-end align-items-end ">
-                <li class="d-flex flex-column justify-content-center"><a target="_blank" href="https://facebook.com/yatsbenin"><i style="color: #036a56 ;"
+                <li class="d-flex flex-column justify-content-center"><a target="_blank" href="https://facebook.com/yatsbenin" aria-label="Page Facebook de Yats"><i style="color: #036a56 ;"
                                     class="fab fa-facebook-f"></i></a></li>
-                <li class="d-flex flex-column justify-content-center"><a target="_blank" href="https://www.instagram.com/yats_benin/"><i style="color: #036a56 ;"
+                <li class="d-flex flex-column justify-content-center"><a target="_blank" href="https://www.instagram.com/yats_benin/" aria-label="Compte Instagram de Yats"><i style="color: #036a56 ;"
                                     class="fab fa-instagram"></i></a></li>
-                <li class="d-flex flex-column justify-content-center"><a target="_blank"  href="https://wa.me/message/OP3HPJCWWU75K1"><i style="color: #036a56 ;"
+                <li class="d-flex flex-column justify-content-center"><a target="_blank"  href="https://wa.me/message/OP3HPJCWWU75K1" aria-label="Nous écrire sur Whatsapp"><i style="color: #036a56 ;"
                                     class="fab fa-whatsapp"></i></a></li>
               </ul>
             </div>
